--- a/assets/styles/bio-2.0.css
+++ b/assets/styles/bio-2.0.css
@@ -14,7 +14,7 @@
 }
 
 body{
-    background: #5C5470;
+    background: #2c2931;
 }
 
 
@@ -22,16 +22,19 @@ body{
 .navegacao{
     background:#352F44;
     padding: 30px;
-    margin-bottom: 10px;
+    margin: 10px auto;
+    width: 80%;
+    border-radius: 80px;
 }
 
 .navegacao a{
     text-decoration: none;
-    font-size: 1.2em;
+    font-size: 1.1em;
     background:#5C5470;
     color: #FAF0E6;
     border-radius: 5px;
-    padding: 5px;
+    padding: 20px;
+    margin-right: 15px;
 }
 
 .navegacao a:hover{
@@ -43,11 +46,30 @@ body{
 }
 /*Biografia escrita*/
 
-.container-infancia{
+.container-pai-historia{
+    background: #5C5470;
+    margin: 30px auto;
+    width: 90%;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.container{
     background: #352F44;
-    margin: 20px auto;
+    margin: 30px auto;
     width: 50%;
     padding: 20px;
     border-radius: 10px;
+}
+
+.container h3{
+    font-size: 1.5em;
+    margin-bottom: 5px;
+    text-align: center;
+    text-shadow: 4px 2px 9px rgba(0, 0, 0, 0.5);
+}
+
+.container p{
+    margin-bottom: 10px;
 }
 
