--- a/assets/styles/bio-2.0.css
+++ b/assets/styles/bio-2.0.css
@@ -14,16 +14,16 @@
 }
 
 body{
-    background: #2c2931;
+    background: #252429;
 }
 
 
 /*Navegação*/
 .navegacao{
     background:#352F44;
-    padding: 30px;
-    margin: 10px auto;
-    width: 80%;
+    padding: 20px;
+    margin: 5px auto;
+    width: 65%;
     border-radius: 80px;
 }
 
@@ -33,7 +33,7 @@ body{
     background:#5C5470;
     color: #FAF0E6;
     border-radius: 5px;
-    padding: 20px;
+    padding: 10px;
     margin-right: 15px;
 }
 
@@ -47,19 +47,19 @@ body{
 /*Biografia escrita*/
 
 .container-pai-historia{
-    background: #5C5470;
-    margin: 30px auto;
-    width: 90%;
+    background: #252429;
+    margin: 0px auto;
+    width: 100%;
     padding: 20px;
     border-radius: 10px;
 }
 
 .container{
     background: #352F44;
-    margin: 30px auto;
+    margin: 20px auto;
     width: 50%;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 .container h3{
