--- a/assets/styles/bio-2.0.css
+++ b/assets/styles/bio-2.0.css
@@ -76,3 +76,16 @@ body{
     margin-bottom: 10px;
 }
 
+.imagem{
+    text-align: center;
+}
+
+img {
+    border-radius: 50%;
+    width: 240px;
+    height: 250px
+}
+
+
+
+
