--- a/assets/styles/bio-2.0.css
+++ b/assets/styles/bio-2.0.css
@@ -49,20 +49,15 @@ body{
 
 /*Biografia escrita*/
 
-.container-pai-historia{
-    background: #252429;
-    margin: 0px auto;
-    width: 100%;
-    padding: 20px;
-    border-radius: 10px;
-}
+
 
 .container{
     background: #352F44;
     margin: 0px auto;
-    width: 50%;
+    width: 40%;
     padding: 20px;
     border-radius: 20px;
+    border: 2px solid gray;
 }
 
 .container h3{
@@ -86,6 +81,13 @@ img {
     height: 250px
 }
 
+.video-container{
+    position: absolute;
+    top: 100px;
+    left: 0px;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+}
 
 
 
